[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/missile.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy_missile.svg" type="Texture" id=2]
[ext_resource path="res://assets/missile_trail3.svg" type="Texture" id=3]
[ext_resource path="res://assets/exhaustion_flames.png" type="Texture" id=4]
[ext_resource path="res://assets/blue_explosion.png" type="Texture" id=5]
[ext_resource path="res://audio/explosion_simple.ogg" type="AudioStream" id=6]
[ext_resource path="res://fonts/lato_normal.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/green_polygon.svg" type="Texture" id=8]
[ext_resource path="res://assets/red_triangle.svg" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.67451, 0.67451, 0.67451, 0 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.662745, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.47451, 0.00784314, 0.00784314, 0 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.639216, 0.639216, 0.639216, 1 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0 )
colors = PoolColorArray( 0.886275, 0.74902, 0, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.627551 )
colors = PoolColorArray( 1, 1, 1, 1, 0.181641, 0.181641, 0.181641, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.990867, 0.242022 ), -0.17829, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_align_y = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
damping = 1.0
scale = 0.02
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[node name="missile" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )

[node name="visual_infos" type="Node2D" parent="."]

[node name="threat_shapes" type="Node2D" parent="visual_infos"]
visible = false
z_index = 140

[node name="green_polygon" type="Sprite" parent="visual_infos/threat_shapes"]
position = Vector2( 0.191845, -8.83881 )
scale = Vector2( 0.257724, 0.257724 )
texture = ExtResource( 8 )

[node name="red_triangle" type="Sprite" parent="visual_infos/threat_shapes"]
visible = false
position = Vector2( 0.690224, -15.025 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 9 )

[node name="priorities" type="Node2D" parent="visual_infos"]
visible = false
z_index = 141

[node name="priority" type="Label" parent="visual_infos/priorities"]
margin_left = -110.0
margin_top = -238.333
margin_right = 1.52588e-05
margin_bottom = -141.333
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 5
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="visual_infos/priorities/priority"]
show_behind_parent = true
margin_left = -4.0
margin_top = 8.0
margin_right = 115.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="threat_square" type="Node2D" parent="visual_infos"]
visible = false
z_index = 142

[node name="priority_square" type="Panel" parent="visual_infos/threat_square"]
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 125, 125 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bounding_box" type="Panel" parent="visual_infos"]
visible = false
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eta" type="Label" parent="visual_infos"]
visible = false
margin_left = 110.739
margin_top = -166.446
margin_right = 292.739
margin_bottom = -69.4462
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.670588, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "?"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unlocked_visual_infos" type="Node2D" parent="."]
z_index = 150

[node name="path" type="Line2D" parent="unlocked_visual_infos"]
visible = false
points = PoolVector2Array( 0, 0, 0, -3000 )
width = 14.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 4 )
texture_mode = 2
joint_mode = 2

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( -0.0652891, 101.373 )
rotation = 3.14159
scale = Vector2( 0.114664, 0.322708 )
enabled = false
texture = ExtResource( 4 )
texture_scale = 0.5
color = Color( 1, 0, 0, 1 )
energy = 1.5
range_height = 50.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
show_behind_parent = true
position = Vector2( -0.663414, 524.993 )
rotation = 3.16777
z_index = -1
amount = 10
lifetime = 6.0
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 3 )

[node name="ghost_sprite" type="Sprite" parent="." groups=[
"ghost_sprite",
]]
scale = Vector2( 0.1, 0.1 )
z_index = 150
texture = ExtResource( 2 )

[node name="ghost_sprite2" type="Sprite" parent="." groups=[
"ghost_sprite",
]]
visible = false
scale = Vector2( 0.1, 0.1 )
z_index = 151
texture = ExtResource( 2 )

[node name="ghost_sprite3" type="Sprite" parent="." groups=[
"ghost_sprite",
]]
scale = Vector2( 0.1, 0.1 )
z_index = 152
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -0.294628 )
scale = Vector2( 1.493, 4.5 )
build_mode = 1
polygon = PoolVector2Array( 0.0578635, -12.4599, 4.50236, -11.8749, 7.63426, -10.5884, 8.10341, 5.98989, -7.75105, 6.0684, -7.98768, -10.3402, -4.44595, -11.9243 )
one_way_collision_margin = 0.0

[node name="tween" type="Tween" parent="."]

[node name="blue_expl" type="Sprite" parent="."]
visible = false
position = Vector2( 0.93457, -2.06238 )
scale = Vector2( 0.482309, 0.500674 )
z_index = 110
texture = ExtResource( 5 )

[node name="tween_expl" type="Tween" parent="."]

[node name="expl_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="tween_completed" from="tween" to="." method="_on_Tween_tween_completed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
